# SteelFLUX

./: .env  .txt  README.md  Saida.xlsx  database.db  entropia.ipynb  gerar_canto.py  main.py  motivos.txt  pyproject.toml  readME.md  settings.py  temp.ipynb
data_preparete/: Amostras.ipynb  Visualize.ipynb  data_train.csv  injector.py  move.py  plot.py  temp.ipynb
data_preparete/.ipynb_checkpoints/: Amostras-checkpoint.ipynb  Visualize-checkpoint.ipynb  extra-checkpoint.py  injector-checkpoint.py  temp-checkpoint.ipynb
dateset_generator/: .env  .gitignore  database.db  gerar_canto.py  gerar_chapa.py  main.py  motivos.txt  pyproject.toml  settings.py  temp.ipynb
dateset_generator/generator/: connection.py  db.py  elements.py  models.py
dateset_generator/gerdau/: catalog.py  connection.py  unit.py
dateset_generator/gerdau/Dados/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
dateset_generator/tests/: conftest.py  test_connnection.py  test_elements.py  test_endplate.py
experimentos/: .env  README.md  settings.py
experimentos/utils/: database.py
generator/: catalog.py  connection.py  db.py  elements.py  mask.py
gerdau/: __init__.py  connection.py  db.py  elements.py  models.py  plot.py
gerdau/Dados/: Perfis.xlsx
migrations/: env.py
migrations/versions/: 00831190ed39_innit.py  04d49119d618_innit.py  3d3c3ee3db19_innit.py  90f7131cf702_sol.py
tests/: test_connnection.py  test_elements.py  test_mask.py
web/: README.md
web/backend/: .env  README.md  database.db  gitignore.txt  pyproject.toml  settings.py
web/backend/migrations/: env.py
web/backend/migrations/versions/: 4a4de1dc219c_commit.py  503c79381876_commit00.py  cedefaeafe99_commit1.py  e631d20d6b9f_commit01.py
web/backend/spam/: app.py  database.py  models.py  schemas.py
web/backend/spam/routers/: auth.py  models.py  predict.py  status.py  train.py
web/backend/spam/utils/: log.py
web/backend/tests/: conftest.py  test_auth.py  test_models.py  test_status.py
web/frontend/: README.md  pyproject.toml
web/frontend/app/: main.py
web/frontend/app/pages/: Flux.py  Gan.py
