[tool.poetry]
name = "gerdau"
version = "0.1.0"
description = ""
authors = ["brhenri-mr <superbr55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pint = "^0.24.3"
matplotlib = "^3.9.2"
pytest = "^8.3.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.data.dependencies]
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
