[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["brhenri-mr <superbr55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pytask = "^0.5.2"
sqlalchemy = "^2.0.37"
alembic = "^1.14.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"


[tool.poetry.group.ai.dependencies]
diffusers = "0.30.2"
torch = "^2.5.1"
transformers = "^4.48.1"
accelerate = "^1.3.0"

[tool.taskipy.tasks]
run = "fastapi dev spam/app.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
