[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["brhenri-mr <superbr55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
pytask = "^0.5.2"
requests = "^2.32.3"

[tool.taskipy.tasks]
run = "streamlit run app/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
